--- a/gerenciadorClin/pom.xml
+++ b/gerenciadorClin/pom.xml
@@ -22,6 +22,7 @@
 		<spring-framework-version>5.1.1.RELEASE</spring-framework-version>
 		<servelet.version>3.1.0</servelet.version>
 		<thymeleaf.version>3.0.10.RELEASE</thymeleaf.version>
+		<hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
 
 		<java.versioin>1.8</java.versioin>
 	</properties>
@@ -39,6 +40,7 @@
 	</build>
 	<dependencyManagement>
 		<dependencies>
+			<!-- Springframework -->
 			<dependency>
 				<groupId> org.springframework</groupId>
 				<artifactId>spring-framework-bom</artifactId>
@@ -53,6 +55,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		<!-- Servlet-api -->
 		<dependency>
@@ -62,19 +65,27 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 -->
+		<!--thymeleaf-spring -->
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf</artifactId>
 			<version>${thymeleaf.version}</version>
+			<scope>compile</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 -->
+		<!--thymeleaf-spring4 -->
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring4</artifactId>
 			<version>${thymeleaf.version}</version>
+			<scope>compile</scope>
 		</dependency>
-
+		<!--hibernate-validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate-validator.version}</version>
+			<scope>compile</scope>
+		</dependency>
 
 	</dependencies>
 </project>
