--- a/gerenciadorClin/pom.xml
+++ b/gerenciadorClin/pom.xml
@@ -23,6 +23,8 @@
 		<servelet.version>3.1.0</servelet.version>
 		<thymeleaf.version>3.0.10.RELEASE</thymeleaf.version>
 		<hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
+		<log4j.version>2.11.1</log4j.version>
+		<jcl-over-slf4j.version>1.7.25</jcl-over-slf4j.version>
 
 		<java.versioin>1.8</java.versioin>
 	</properties>
@@ -56,6 +58,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<scope>compile</scope>
+			<exclusions>
+			<exclusion>
+			<groupId>commns-logging	</groupId>
+			<artifactId>commns-logging</artifactId>
+			</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- Servlet-api -->
 		<dependency>
@@ -79,7 +87,29 @@
 			<version>${thymeleaf.version}</version>
 			<scope>compile</scope>
 		</dependency>
-		<!--hibernate-validator -->
+	<!--logging-->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>${log4j.version}</version>
+		</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-api</artifactId>
+					<version>${log4j.version}</version>
+			</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<!--jcl-over-slf4j -->
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>jcl-over-slf4j</artifactId>
+		    <version>${jcl-over-slf4j.version}</version>
+		</dependency>
+	<!--hibernate-validator -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
