--- a/gerenciadorClin/pom.xml
+++ b/gerenciadorClin/pom.xml
@@ -25,6 +25,8 @@
 		<hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
 		<log4j.version>2.11.1</log4j.version>
 		<jcl-over-slf4j.version>1.7.25</jcl-over-slf4j.version>
+		<!-- JPA / Hibernate -->
+        <hibernate.version>5.3.7.Final</hibernate.version>
 
 		<java.versioin>1.8</java.versioin>
 	</properties>
@@ -116,6 +118,19 @@
 			<version>${hibernate-validator.version}</version>
 			<scope>compile</scope>
 		</dependency>
-
+		<!-- JPA / Hibernate -->
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-entitymanager</artifactId>
+		<version>${hibernate.version}</version>
+		<scope>compile</scope>
+	</dependency>
+	<!-- Hibernate - Java 8 support -->
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-java8</artifactId>
+		<version>${hibernate.version}</version>
+		<scope>compile</scope>
+	</dependency>
 	</dependencies>
 </project>
