--- a/gerenciadorClin/pom.xml
+++ b/gerenciadorClin/pom.xml
@@ -29,6 +29,8 @@
 		<!-- JPA / Hibernate -->
         <hibernate.version>5.3.7.Final</hibernate.version>
         <mysql-connector-java.version>8.0.13</mysql-connector-java.version>
+        <!-- Spring Data JPA -->
+		<spring-data-jpa.version>1.10.2.RELEASE</spring-data-jpa.version>
 
 		<java.versioin>1.8</java.versioin>
 	</properties>
@@ -149,5 +151,11 @@
 		<version>${mysql-connector-java.version}</version>
 		<scope>provided</scope>
  </dependency>
+ <!-- Spring Data JPA -->
+	<dependency>
+	 	<groupId>org.springframework.data</groupId>
+		<artifactId>spring-data-jpa</artifactId>
+		<version>${spring-data-jpa.version}</version>
+	</dependency>
 	</dependencies>
 </project>
